Making boxes clickable in menu, fixing grid spacing, making footer stick to content.

--- a/duck1.css
+++ b/duck1.css
@@ -1,53 +1,58 @@
 body{
     font-family: 'Quicksand', sans-serif;
-    background-color:white;
+    background-color: white;
     margin: 0;
 }
 h1{
     font-family: 'Quicksand', sans-serif;
     color: #1c9e05;
+    font-size: 30pt;
 }
 h2{
     font-family: 'Quicksand', sans-serif;
-    color:black;
-    white-space: pre-line;
+    color:#1c9e05;
+    font-size: 20pt;
 }
 h2 > a{
     font-family: 'Quicksand', sans-serif;
-    color: yellow;
+    color: rgb(255,243,52);
 }
 footer{
-    background-color: #fffb82;
-    position:fixed;
-    bottom: 0px;
     width:100%;
+    bottom: 0px;
 }
-a:link {
+a:link{
     text-decoration: none;
-    color:#1c9e05;
+    color: #1c9e05;
 }
 a:visited{
     text-decoration: none;
-    color: black;
+    color: #1c9e055b;
 }
 a:hover{
+    text-decoration: underline;
+}
+.box > a:link {
+    text-decoration: none;
+    color: black;
+}
+.box > .boxa:visited{
+    text-decoration: none;
+    color: black;
+}
+.box > a:hover{
     text-decoration: none;
     color:#1c9e05;
 }
-a:active{
+.box > a:active{
     text-decoration: none;
-    color:#1c9e05;
+    color: #1c9e05;
 }
 p{
     font-family: 'Sarabun', sans-serif;
 }
-.game{
-    grid-column:5; 
-    grid-row: 1;
-    padding-top: 20px;
-}
 #nav{
-    background-color:#fffb82;
+    background-color:rgb(255,243,52);
 }
 .box {
     padding: 1px;
@@ -60,11 +65,23 @@ p{
     padding-left: 2px;
     padding-right: 2px;
   }
+.wrapper_content{
+    display:grid;
+    grid-template-columns: repeat(9, 1fr);
+    grid-gap: 10px;
+    padding-left: 2px;
+    padding-right: 2px;
+    grid-auto-rows: minmax(auto, auto);
+}
+.game{
+    grid-column:5; 
+    grid-row: 1;
+    padding-top: 20px;
+}
 .about_content {
     grid-column-start: 3;
     grid-column-end: 8; 
-    grid-row-start: 1;
-    grid-row-end:5 ;
+    grid-row: 1;
     flex-wrap: wrap;
     display: flex;
     justify-content: center;
@@ -73,7 +90,6 @@ p{
 .bio_content {
     grid-column-start: 3;
     grid-column-end: 8;
-    grid-row-start: 5;
     display: flex;
     flex-wrap: wrap;
     justify-content: center;
@@ -115,7 +131,7 @@ p{
 }
 .far_left:hover{
     background-color: white;
-    box-shadow: inset 0 -5px 0 0 #1c9e05; 
+    box-shadow: inset 0 -5px 0 0  #1c9e05; 
     color: #1c9e05;
     
 }
@@ -128,7 +144,7 @@ p{
 }
 .left:hover{
     background-color: white;
-    box-shadow: inset 0 -5px 0 0 #1c9e05; 
+    box-shadow: inset 0 -5px 0 0  #1c9e05; 
     color: #1c9e05;
     
 }
@@ -148,7 +164,7 @@ p{
   }
 .right:hover{
     background-color: white;
-    box-shadow: inset 0 -5px 0 0 #1c9e05; 
+    box-shadow: inset 0 -5px 0 0  #1c9e05; 
     color: #1c9e05;
     
 }
@@ -161,7 +177,7 @@ p{
 }
 .far_right:hover{
     background-color: white;
-    box-shadow: inset 0 -5px 0 0 #1c9e05; 
+    box-shadow: inset 0 -5px 0 0  #1c9e05; 
     color: #1c9e05;
     
 }
